# SandyTetris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  error.txt
assets/image/: titlescreen.aseprite
assets/shader/: heat.fs
assets/shader/100/: heat.fs
src/: animations.cpp  app.cpp  assets.cpp  ending.cpp  game.cpp  intro.cpp  main.cpp  pixelfont.cpp  sand.cpp  simulation.cpp  transitions.cpp
src/include/: animations.h  app.h  assets.h  common.h  debug.h  easing.h  ending.h  game.h  intro.h  levels.h  pixelfont.h  sand.h  shapes.h  simulation.h  transitions.h
